--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             uniform vec2  mouse;
             uniform vec2  resolution;
 
-            void main(void){
+            void main(){
 
                 vec2 position = ( gl_FragCoord.xy / resolution.xy ) + mouse / 4.0;
 
